# Marvin-the-Paranoid-Assistant

./: .gitignore  .valgrindrc  Makefile  README.md  bundle_install.sh  bundle_uninstall.sh  install.sh  main.c  marvin  meson.build
.cincludes/: global_variable.h  marvin.h
.csrc/utils/: double_array.c  wraping.c
.github/workflows/: make.yml  ubuntu.yml
cmd/: cmd_bbl.c  cmd_say.c
includes/: builtins.hpp  global_variable.h  marvin.h  marvin.hpp  utils.hpp
media/: fhjrez  salut.c  sprite  sprite2  test
src/: alloc.c  cmd_help.c  cmd_update.c  ft_strcmp.c  libft.h  main.c  main.cpp  printable.c  warping.c  wraping.c
src/builtins/: builtins.make  define_builtins_command.cpp
src/cmd/: cmd_say.c  cmd_update.c
src/commands/: cmd_help.c  cmd_update.c
src/utils/: alloc.c  printable.c  wraping.c
